Added some more margin and color

--- a/index.html
+++ b/index.html
@@ -24,8 +24,13 @@
                     <img src="https://placehold.it/300x300"/>
                 </li>
             </ul>
-            <img src="https://placehold.it/720x300"/>
+            <div>
+            <img src="https://placehold.it/715x300"/>
             <img src="https://placehold.it/220x300"/>
+            </div>
         </main>
     </body>
+    <footer>
+        
+    </footer>
 </html>
