Added call to action section

--- a/index.html
+++ b/index.html
@@ -24,9 +24,18 @@
                     <img src="https://placehold.it/300x300"/>
                 </li>
             </ul>
+            <section>
+                <img src="https://placehold.it/530x380"/>
+                <div>
+                    <h2>Featured Section</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam recusandae quidem, commodi minima amet libero, perspiciatis cumque mollitia officiis provident error consequatur quis ex accusamus facere dolore quas sint aspernatur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam recusandae quidem, commodi minima amet libero, perspiciatis cumque mollitia officiis provident error consequatur quis ex accusamus facere dolore quas sint aspernatur.Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam recusandae quidem, commodi minima amet libero, perspiciatis cumque mollitia officiis provident error consequatur quis ex accusamus facere dolore quas sint aspernatur. 
+                    </p>
+                    <button>Call to Action</button>
+                </div>
+            </section>
             <div>
-            <img src="https://placehold.it/715x300"/>
-            <img src="https://placehold.it/220x300"/>
+                <img src="https://placehold.it/960x300"/>
             </div>
         </main>
     </body>
