--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
     </head>
     <body>
         <header>
-
+            <nav>
+                <img src="https://placehold.it/200x60"/>
+                <ul>
+                    <li><a href="#">Page 1</a></li>
+                    <li><a href="#">Page 2</a></li>
+                    <li><a href="#">Page 3</a></li>
+                    <li><a href="#">Page 4</a></li>
+                </ul>
+            </nav>
         </header>
         <main>
             <div>
